# Crawlier

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  OUTPUT_GUIDE.md  OUTPUT_VERIFICATION.md  README.md  RELEASE_NOTES.md  STRUCTURE.txt  crawlier.bat  crawlier.ps1  crawlier.spec  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml
crawlier_old_backup/: __init__.py  crawlier.py  requirements.txt
output/: crawl_results.json  crawl_results_report.txt  crawl_results_urls.csv
src/app/: batch_crawler.py  crawl_queue.txt  terminal_crawler.py
src/crawlier/: __init__.py  cli.py  crawler.py  setup_path.py
src/crawlier/app/: __init__.py  batch_crawler.py  terminal_crawler.py
tests/: conftest.py  test.py  test_crawlier.py
